Add auto-seeding and better error handling

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=5001
-JWT_SECRET=your_jwt_secret_key_here
-NODE_ENV=production
-MONGODB_URI=your_mongodb_connection_string_here
+JWT_SECRET=minimart_secret_key_2024
+NODE_ENV=development
+MONGODB_URI=mongodb://localhost:27017/minimart
